--- a/app/src/main/res/layout/activity_account_settings.xml
+++ b/app/src/main/res/layout/activity_account_settings.xml
@@ -1,54 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="8dp">
 
     <ImageButton
-        android:id="@+id/accountsettings_image_view_back"
+        android:id="@+id/account_settings_image_view_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:src="@drawable/ic_back" />
+        android:background="?android:attr/selectableItemBackground"
+        android:padding="10dp"
+        android:src="@drawable/ic_arrow_back_black_24dp" />
 
     <ImageView
-        android:id="@+id/accountsettings_image_View_account"
-        android:tint="@color/secondaryDarkColor"
+        android:id="@+id/account_settings_image_View_account"
         android:layout_width="115dp"
-        android:layout_height="123dp"
+        android:layout_height="115dp"
         android:layout_gravity="center"
-        android:src="@drawable/ic_account" />
+        android:src="@drawable/ic_account"
+        android:tint="@color/secondaryDarkColor" />
 
     <TextView
-        android:id="@+id/accountsettings_text_view_account"
+        android:id="@+id/account_settings_text_view_account"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Account"
+        android:text="@string/account_settings_text_account"
         android:textColor="@color/secondaryDarkColor"
-        android:textSize="25dp"
+        android:textSize="25sp"
         android:textStyle="bold" />
 
     <ScrollView
-        android:id="@+id/accountsetting_scrollview_email"
+        android:id="@+id/account_setting_scrollview_email"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_marginTop="10dp">
 
         <LinearLayout
-            android:id="@+id/accountsettings_Linear_Layout_email"
+            android:id="@+id/account_settings_Linear_Layout_email"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingHorizontal="30dp">
 
             <TextView
-                android:id="@+id/accountsettings_text_view_email"
+                android:id="@+id/account_settings_text_view_email"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_marginLeft="30dp"
-                android:text="naver.com"
+                android:layout_height="wrap_content"
                 android:textColor="@color/black"
-                android:textSize="30dp" />
+                android:textSize="24sp"
+                tools:text="abcdef@naver.com" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -56,20 +59,19 @@
                 android:orientation="horizontal">
 
                 <EditText
-                    android:id="@+id/accountsettings_text_view_edit_name"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/account_settings_text_view_edit_name"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="30dp"
-                    android:text="이름"
+                    android:layout_weight="1"
                     android:textColor="@color/black"
-                    android:textSize="20dp" />
+                    android:textSize="20sp"
+                    tools:text="이름" />
 
                 <ImageButton
-                    android:id="@+id/accountsettings_image_view_edit_btn"
+                    android:id="@+id/account_settings_image_view_edit_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="15dp"
-                    android:background="@color/no_color"
+                    android:background="?android:attr/selectableItemBackground"
                     android:src="@drawable/ic_edit" />
             </LinearLayout>
         </LinearLayout>
@@ -77,137 +79,130 @@
 
 
     <ScrollView
-        android:id="@+id/accountsetting_scrollview_item"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="5dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <LinearLayout
-                android:id="@+id/accountsettings_Linear_Layout_logout"
+                android:id="@+id/account_settings_Linear_Layout_logout"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
+                android:background="?android:attr/selectableItemBackground"
+                android:clickable="true"
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/accountsettings_image_view_account"
-                    android:layout_width="39dp"
+                    android:layout_width="41dp"
                     android:layout_height="34dp"
                     android:layout_gravity="center"
-                    android:tint="@color/secondaryDarkColor"
-                    android:layout_marginLeft="25dp"
-                    android:src="@drawable/ic_logout" />
+                    android:layout_marginStart="25dp"
+                    android:src="@drawable/ic_logout"
+                    android:tint="@color/secondaryDarkColor" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="15dp"
+                    android:layout_marginStart="15dp"
                     android:layout_marginTop="5dp"
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/accountsettings_item_text_view_Logout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Logout"
+                        android:text="@string/account_settings_text_logout"
                         android:textColor="@color/black"
-                        android:textSize="19dp" />
+                        android:textSize="18sp" />
 
                     <TextView
-                        android:id="@+id/accountsettings_item_text_view_subLogout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
-                        android:text="Logout and go to login page." />
+                        android:text="@string/account_settings_description_logout" />
                 </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/accountsettings_Linear_Layout_password"
+                android:id="@+id/account_settings_Linear_Layout_password"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginTop="10dp"
+                android:background="?android:attr/selectableItemBackground"
+                android:clickable="true"
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/accountsettings_image_view_password"
                     android:layout_width="39dp"
                     android:layout_height="34dp"
-                    android:tint="@color/secondaryDarkColor"
                     android:layout_gravity="center"
-                    android:layout_marginLeft="25dp"
-                    android:src="@drawable/ic_key" />
+                    android:layout_marginStart="25dp"
+                    android:src="@drawable/ic_key"
+                    android:tint="@color/secondaryDarkColor" />
 
                 <LinearLayout
-                    android:id="@+id/settings_item_Linear_Layout_Second"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="15dp"
+                    android:layout_marginStart="15dp"
                     android:layout_marginTop="5dp"
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/accountsettings_item_text_view_reset_password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Reset password"
+                        android:text="@string/account_settings_text_reset_password"
                         android:textColor="@color/black"
-                        android:textSize="19dp" />
+                        android:textSize="18sp" />
 
                     <TextView
-                        android:id="@+id/accountsettings_item_text_view_subpassword"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
-                        android:text="Request an email to reset my password." />
+                        android:text="@string/account_settings_description_reset_password" />
                 </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/accountsettings_Linear_Layout_delete"
+                android:id="@+id/account_settings_Linear_Layout_delete"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginTop="10dp"
+                android:background="?android:attr/selectableItemBackground"
+                android:clickable="true"
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/accountsettings_image_view_delete"
                     android:layout_width="39dp"
                     android:layout_height="34dp"
                     android:layout_gravity="center"
-                    android:layout_marginLeft="25dp"
-                    android:tint="@color/secondaryDarkColor"
-                    android:src="@drawable/ic_out" />
+                    android:layout_marginStart="25dp"
+                    android:src="@drawable/ic_out"
+                    android:tint="@color/secondaryDarkColor" />
 
                 <LinearLayout
-                    android:id="@+id/accountsettings_Linear_Layout_Second"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="15dp"
+                    android:layout_marginStart="15dp"
                     android:layout_marginTop="5dp"
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/accountsettings_text_view_delete"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Delete account"
+                        android:text="@string/account_settings_text_delete_account"
                         android:textColor="@color/black"
-                        android:textSize="19dp" />
+                        android:textSize="18sp" />
 
                     <TextView
-                        android:id="@+id/accountsettings_text_view_subdelete"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
-                        android:text="Delete my account pernamently." />
+                        android:text="@string/account_settings_description_delete_account" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
-
     </ScrollView>
 </LinearLayout>
