--- a/app/src/main/res/layout/activity_alert_settings.xml
+++ b/app/src/main/res/layout/activity_alert_settings.xml
@@ -4,18 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="8dp">
 
     <ImageButton
-        android:id="@+id/Alertsettings_image_view_back"
+        android:id="@+id/alert_settings_image_view_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
+        android:background="?android:attr/selectableItemBackground"
+        android:padding="10dp"
         android:src="@drawable/ic_back" />
 
     <ImageView
-        android:id="@+id/settings_imageView"
         android:layout_width="115dp"
         android:layout_height="123dp"
         android:layout_gravity="center"
@@ -23,109 +25,94 @@
         android:tint="@color/secondaryDarkColor" />
 
     <TextView
-        android:id="@+id/Alertsettings_text_view_Alert"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginBottom="5dp"
-        android:text="Alert"
+        android:text="@string/alert_settings_text_alert"
         android:textColor="@color/secondaryDarkColor"
-        android:textSize="25dp"
+        android:textSize="25sp"
         android:textStyle="bold" />
 
     <ScrollView
-        android:id="@+id/alertsettings_scroll_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:id="@+id/alertsettings_Linear_Layout_whole"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <LinearLayout
-                android:id="@+id/alertsettings_Linear_Layout_Calendar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/alertsettings_text_view_Calendar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="30dp"
-                    android:text="Calendar"
+                    android:layout_marginStart="30dp"
+                    android:text="@string/alert_settings_text_calendar"
                     android:textColor="@color/black"
-                    android:textSize="30dp"
-                    android:textStyle="bold"></TextView>
+                    android:textSize="30sp" />
 
                 <LinearLayout
-                    android:id="@+id/alertsettings_Linear_Layout_weight"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/alertsettings_text_view_weight"
                         android:layout_width="310dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="25dp"
+                        android:layout_marginStart="25dp"
                         android:layout_marginTop="5dp"
-                        android:text="On weight update"
+                        android:text="@string/alert_settings_item_weight"
                         android:textColor="@color/black"
-                        android:textSize="20dp"
-                        android:textStyle="bold" />
+                        android:textSize="20sp" />
 
                     <Switch
-                        android:id="@+id/alersettings_switch_button_weight"
+                        android:id="@+id/alert_settings_switch_button_weight"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/alertsettings_Linear_Layout_birthday"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/alertsettings_text_view_birthday"
                         android:layout_width="310dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="25dp"
+                        android:layout_marginStart="25dp"
                         android:layout_marginTop="5dp"
-                        android:text="On birthday"
+                        android:text="@string/alert_settings_item_birthday"
                         android:textColor="@color/black"
-                        android:textSize="20dp"
-                        android:textStyle="bold" />
+                        android:textSize="20sp" />
 
                     <Switch
-                        android:id="@+id/alersettings_switch_button_birthday"
+                        android:id="@+id/alert_settings_switch_button_birthday"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/alertsettings_Linear_Layout_event"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/alertsettings_text_view_event"
                         android:layout_width="310dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="25dp"
+                        android:layout_marginStart="25dp"
                         android:layout_marginTop="5dp"
-                        android:text="On other event"
+                        android:text="@string/alert_settings_item_event"
                         android:textColor="@color/black"
-                        android:textSize="20dp"
-                        android:textStyle="bold" />
+                        android:textSize="20sp" />
 
                     <Switch
-                        android:id="@+id/alersettings_switch_button_event"
+                        android:id="@+id/alert_settings_switch_button_event"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
                 </LinearLayout>
@@ -133,46 +120,39 @@
 
 
             <LinearLayout
-                android:id="@+id/alertsettings_Linear_Layout_Community"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/alertsettings_text_view_Community"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="30dp"
-                    android:text="Community"
+                    android:layout_marginStart="30dp"
+                    android:text="@string/alert_settings_text_community"
                     android:textColor="@color/black"
-                    android:textSize="30dp"
-                    android:textStyle="bold"></TextView>
+                    android:textSize="30sp" />
 
                 <LinearLayout
-                    android:id="@+id/alertsettings_Linear_Layout_community"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/alertsettings_text_view_comment"
                         android:layout_width="310dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="25dp"
+                        android:layout_marginStart="25dp"
                         android:layout_marginTop="5dp"
-                        android:text="On commented"
+                        android:text="@string/alert_settings_item_comment"
                         android:textColor="@color/black"
-                        android:textSize="20dp"
-                        android:textStyle="bold" />
+                        android:textSize="20sp" />
 
                     <Switch
-                        android:id="@+id/alersettings_switch_button_comment"
+                        android:id="@+id/alert_settings_switch_button_comment"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
-
     </ScrollView>
 </LinearLayout>
