--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -2,14 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="8dp">
 
     <ImageView
         android:id="@+id/settings_image_view_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="5dp"
+        android:background="?android:attr/selectableItemBackground"
+        android:padding="10dp"
         android:src="@drawable/ic_back" />
 
     <ImageView
@@ -25,9 +26,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Setting"
+        android:text="@string/settings_text_settings"
         android:textColor="@color/secondaryDarkColor"
-        android:textSize="25dp"
+        android:textSize="25sp"
         android:textStyle="bold" />
 
     <ScrollView
@@ -38,92 +39,88 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:orientation="vertical">
 
             <LinearLayout
-                android:id="@+id/settings_item_Linear_Layout_Account"
+                android:id="@+id/settings_container_item_account"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
+                android:background="?android:attr/selectableItemBackground"
+                android:clickable="true"
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/settings_image_view_account"
                     android:layout_width="39dp"
                     android:layout_height="34dp"
                     android:layout_gravity="center"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginStart="10dp"
                     android:src="@drawable/ic_account"
                     android:tint="@color/secondaryDarkColor" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="15dp"
+                    android:layout_marginStart="15dp"
                     android:layout_marginTop="5dp"
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/settings_item_text_view_Account"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Account"
+                        android:text="@string/settings_text_account"
                         android:textColor="@color/black"
-                        android:textSize="19dp" />
+                        android:textSize="19sp" />
 
                     <TextView
                         android:id="@+id/settings_item_text_view_Username"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
-                        android:text="User name" />
+                        android:text="@string/settings_description_account" />
                 </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/settings_item_Linear_Layout_alert"
+                android:id="@+id/settings_container_item_alert"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginTop="10dp"
+                android:background="?android:attr/selectableItemBackground"
+                android:clickable="true"
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/settings_image_view_alert"
                     android:layout_width="39dp"
                     android:layout_height="34dp"
                     android:layout_gravity="center"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginStart="10dp"
                     android:src="@drawable/ic_alert"
                     android:tint="@color/secondaryDarkColor" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="15dp"
+                    android:layout_marginStart="15dp"
                     android:layout_marginTop="10dp"
                     android:orientation="vertical"
                     android:tint="@color/secondaryDarkColor">
 
                     <TextView
-                        android:id="@+id/settings_item_text_view_Alert"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Alert"
+                        android:text="@string/settings_text_alert"
                         android:textColor="@color/black"
-                        android:textSize="19dp" />
+                        android:textSize="19sp" />
 
                     <TextView
-                        android:id="@+id/settings_item_text_view_Push_alert"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
-                        android:text="Push alert,Notification" />
+                        android:text="@string/settings_description_alert" />
                 </LinearLayout>
             </LinearLayout>
-
         </LinearLayout>
     </ScrollView>
-
-
 </LinearLayout>
